--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     delete game[currentKey]
                     nextKey()
                 } else if(text == "?") {
-                    log("<i>" + game[currentKey] + "</i>")
+                    log("<i>" + currentKey + ": " + game[currentKey] + "</i>")
                 } else {
                     log(j + "/" + k + " - <b>" + currentKey + "</b>")
                 }
